[package]
name = "anyhow-http"
description = "Customizable Http errors built on anyhow"
documentation = "https://docs.rs/anyhow-http"
repository = "https://github.com/heat1q/anyhow-http"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.5"
http = "0.2"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

axum = { version = "0.6", default-features = false, optional = true }

[features]
default = []
axum = ["dep:axum"]

[dev-dependencies]
hyper = "0.14"
